--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.1.0'
+version = '0.1.0-SNAPSHOT'
 group = 'net.riceball'
 archivesBaseName = 'riceball-1.12.2'
 
@@ -77,7 +77,7 @@ dependencies {
     // compile "some.group:artifact:version"
 
     compile 'org.spongepowered:mixin:0.8.2'
-    compile 'net.wolftail:wolftail-1.12.2:0.2.1'
+    compile 'net.wolftail:wolftail-1.12.2:0.3.0-SNAPSHOT'
     compile fg.deobf('curse.maven:shincolle-511820:3490446')
 
     // Real examples
